# ParcialUniversidadCRUD

./: Alumno.cpp  Alumno.h  AlumnoCursoDAO.cpp  AlumnoCursoDAO.h  AlumnoDAO.cpp  AlumnoDAO.h  AlumnoSeccionDAO.cpp  AlumnoSeccionDAO.h  CMakeLists.txt  ConexionBD.cpp  ConexionBD.h  Curso.cpp  Curso.h  CursoDAO.cpp  CursoDAO.h  Menus.cpp  Menus.h  Parcial2CRUD  README.md  Seccion.cpp  Seccion.h  SeccionDAO.cpp  SeccionDAO.h  main.cpp  universidad.sql
